[package]
name = "hltb"
version = "0.1.0"
authors = ["gsnewmark <gildraug@gmail.com>"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://gitlab.com/gsnewmark/hltb"
description = "Simple CLI util to query HowLongToBeat"

[dependencies]
failure = "0.1.3"
reqwest = "0.9.5"
select = "0.4.2"
structopt = "0.2.13"
prettytable-rs = "0.8"