[package]
name = "hltb"
version = "0.1.0"
authors = ["gsnewmark <gildraug@gmail.com>"]
edition = "2018"
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://gitlab.com/gsnewmark/hltb"
repository = "https://gitlab.com/gsnewmark/hltb"
description = "Simple CLI util to query HowLongToBeat"

[dependencies]
failure = "0.1.5"
reqwest = "0.9.18"
select = "0.4.2"
structopt = "0.2.16"
prettytable-rs = "0.8.0"
human-panic = "1.0.1"
